# NaukriScarapeCode

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
resume/: resume.json
src/: main.py
src/applicator/: apply.py
src/core/: config.py  database.py  logger.py  models.py  pipeline.py  profile.py  scheduler.py
src/dashboard/: display.py
src/matcher/: scorer.py
src/scraper/: browser.py  login.py  search.py
