[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "naukribot"
version = "1.0.0"
description = "AI-powered Naukri job application bot"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.19",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "tenacity>=8.3",
    "loguru>=0.7",
    "typer>=0.12",
    "python-dateutil>=2.9",
]

[project.scripts]
naukribot = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
